--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "d3": "^5.1.0",
+    "material-ui": "^0.20.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-input-range": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0-beta.2",
     "react-sound": "^1.2.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
