--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "d3": "^5.1.0",
     "material-ui": "^0.20.0",
+    "mouse-event-offset": "^3.0.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-input-range": "^1.3.0",
